--- a/flycat-springboot/flycat-configure/build.gradle
+++ b/flycat-springboot/flycat-configure/build.gradle
@@ -2,6 +2,9 @@
 dependencies {
     api "org.springframework.boot:spring-boot-autoconfigure:$springBootVersion"
 
+    compileOnly "org.springframework.boot:spring-boot-starter-tomcat:$springBootVersion"
+
+
     compileOnly project(':flycat-context')
     compileOnly project(':flycat-spi')
     compileOnly project(':flycat-wechat')
