--- a/config/gradle/env.gradle
+++ b/config/gradle/env.gradle
@@ -16,3 +16,8 @@ ext.isTestServer = { env ->
 ext.isDocker = {
     env -> return "docker".equals(env.toString()) || "testdocker".equals(env.toString())
 }
+
+ext.isDev = {
+    return !isProd(env) && !isTestServer(env)
+}
+
