--- a/flycat-springboot/flycat-app/build.gradle
+++ b/flycat-springboot/flycat-app/build.gradle
@@ -1,4 +1,3 @@
-
 dependencies {
 
     api project(':flycat-springboot-context')
@@ -19,9 +18,11 @@ dependencies {
 
     api project(':flycat-util')
 
-    compile("org.springframework.boot:spring-boot-starter-actuator:$springBootVersion")
-    compile("org.springframework.boot:spring-boot-starter-security:$springBootVersion")
-    compile group: 'de.codecentric', name: 'spring-boot-admin-starter-client', version: '2.1.6'
+    if (isProd(ext)) {
+        compile("org.springframework.boot:spring-boot-starter-actuator:$springBootVersion")
+        compile("org.springframework.boot:spring-boot-starter-security:$springBootVersion")
+        compile group: 'de.codecentric', name: 'spring-boot-admin-starter-client', version: '2.1.6'
+    }
 
     testCompile group: 'org.mockito', name: 'mockito-core', version: '2.10.0'
 //    developmentOnly("org.springframework.boot:spring-boot-devtools:$springBootVersion")
