--- a/flycat-springboot/flycat-configure/build.gradle
+++ b/flycat-springboot/flycat-configure/build.gradle
@@ -1,4 +1,3 @@
-
 dependencies {
     api "org.springframework.boot:spring-boot-autoconfigure:$springBootVersion"
 
@@ -19,7 +18,9 @@ dependencies {
     compileOnly group: 'com.alibaba', name: 'fastjson', version: '1.2.58'
 
 //    compile group: 'javax.validation', name: 'validation-api', version: '2.0.1.Final'
+    compileOnly 'org.hibernate.validator:hibernate-validator:6.0.18.Final'
 }
+
 
 
 
