--- a/flycat-springboot/flycat-configure/src/main/resources/META-INF/spring-autoconfigure-metadata.properties
+++ b/flycat-springboot/flycat-configure/src/main/resources/META-INF/spring-autoconfigure-metadata.properties
@@ -14,6 +14,6 @@
 # limitations under the License.
 #
 
-MybatisConfiguration.ConditionalOnClass=org.mybatis.spring.mapper.MapperScannerConfigurer
-WebConfiguration.ConditionalOnClass=com.github.flycat.web.WebFactoryConfiguration
-WechatConfiguration.ConditionalOnClass=com.github.flycat.wechat.WechatLogin
+com.github.flycat.autoconfigure.MybatisConfiguration.ConditionalOnClass=org.mybatis.spring.mapper.MapperScannerConfigurer
+com.github.flycat.autoconfigure.WebConfiguration.ConditionalOnClass=com.github.flycat.web.WebFactoryConfiguration
+com.github.flycat.autoconfigure.WechatConfiguration.ConditionalOnClass=com.github.flycat.wechat.WechatLogin
