perf(gradle): reduce configuration phase time

--- a/config/gradle/env.gradle
+++ b/config/gradle/env.gradle
@@ -21,3 +21,14 @@ ext.isDev = {
     return !isProd(env) && !isTestServer(env)
 }
 
+
+ext.ignoredEnv = false
+def executingTasks = project.gradle.startParameter.taskNames
+if (executingTasks == null || executingTasks.isEmpty()
+        || ':classes' in executingTasks
+        || ':compileJava' in executingTasks) {
+    ignoredEnv = true
+}
+
+println "Executing ${project.gradle.startParameter.taskNames}, ignoredEnv $ignoredEnv"
+
