--- a/config/gradle/bootProject.gradle
+++ b/config/gradle/bootProject.gradle
@@ -1,5 +1,9 @@
 import java.text.SimpleDateFormat
 
+if (ignoredEnv) {
+    return
+}
+
 apply plugin: 'io.spring.dependency-management'
 apply plugin: 'org.springframework.boot'
 apply plugin: "java"
