chore(springboot): add default active profile

--- a/config/gradle/javaProject.gradle
+++ b/config/gradle/javaProject.gradle
@@ -96,4 +96,14 @@ task updateClassesFiles() {
     }
 }
 
-
+apply plugin: 'idea'
+idea {
+    //    pathVariables GRADLE_HOME: file("$buildDir")
+    println("build dir $buildDir")
+    module {
+        inheritOutputDirs = false
+        outputDir = file("$buildDir/classes/java/main")
+        downloadJavadoc = false
+        downloadSources = true
+    }
+}
