chore(gradle): change default env

--- a/config/gradle/env.gradle
+++ b/config/gradle/env.gradle
@@ -1,4 +1,4 @@
-ext.environment = "default"
+ext.environment = "dev"
 if (hasProperty("env")) {
     ext.environment = "$env"
 }
@@ -25,8 +25,8 @@ ext.isDev = {
 ext.ignoredEnv = false
 def executingTasks = project.gradle.startParameter.taskNames
 if (executingTasks == null || executingTasks.isEmpty()
-        || ':classes' in executingTasks
-        || ':compileJava' in executingTasks) {
+        || 'classes' in executingTasks
+        || 'compileJava' in executingTasks) {
     ignoredEnv = true
 }
 
