chore(gradle): include validator dependancy

--- a/build.gradle
+++ b/build.gradle
@@ -91,9 +91,9 @@ configure(javaProjects) { it ->
     def projectName = it.name
     configurations {
 
-        if (!projectName.equals("flycat-springboot-configure")) {
-            all*.exclude group: 'org.hibernate.validator'
-        }
+//        if (!projectName.equals("flycat-springboot-configure")) {
+//            all*.exclude group: 'org.hibernate.validator'
+//        }
 
 
         // use fastjson
