--- a/flycat-springboot/flycat-web/build.gradle
+++ b/flycat-springboot/flycat-web/build.gradle
@@ -7,9 +7,12 @@ dependencies {
     api("org.springframework.boot:spring-boot-starter-web:$springBootVersion") {
         exclude group: 'org.springframework.boot', module: 'spring-boot-starter-tomcat'
     }
-    compileOnly "org.springframework.boot:spring-boot-starter-tomcat:$springBootVersion"
 
+//    api "org.springframework.boot:spring-boot-starter-tomcat:$springBootVersion"
+
+    compileOnly "org.springframework.boot:spring-boot-starter-tomcat:$springBootVersion"
     api "org.springframework.boot:spring-boot-starter-undertow:$springBootVersion"
+
 //    api "org.springframework.boot:spring-boot-starter-jetty:$springBootVersion"
 
 
