--- a/flycat-template/flycat-simple/config/gradle/bootProject.gradle
+++ b/flycat-template/flycat-simple/config/gradle/bootProject.gradle
@@ -4,7 +4,7 @@ apply plugin: 'org.springframework.boot'
 apply plugin: "java"
 apply plugin: 'application'
 apply from: "${gradleConfigDir}/tasks.gradle"
-processResources.dependsOn copyConfiguration
+//processResources.dependsOn copyConfiguration
 
 ext.springJvmArgs = ["-Dspring.profiles.active=$env"]
 
