--- a/flycat-agent/build.gradle
+++ b/flycat-agent/build.gradle
@@ -1,5 +1,5 @@
 dependencies {
-    testCompile group: 'junit', name: 'junit', version: '4.12'
+    testImplementation group: 'junit', name: 'junit', version: '4.12'
 
     api project(':flycat-util')
 
@@ -7,7 +7,7 @@ dependencies {
     implementation 'org.ow2.asm:asm-commons:7.0'
     implementation 'org.ow2.asm:asm:7.0'
 
-    compile 'ognl:ognl:3.1.19'
+    api'ognl:ognl:3.1.19'
 
     compileOnly 'com.github.olivergondza:maven-jdk-tools-wrapper:0.1'
 
