--- a/flycat-springboot/flycat-dubbo/build.gradle
+++ b/flycat-springboot/flycat-dubbo/build.gradle
@@ -2,9 +2,9 @@
 dependencies {
     api project(':flycat-context')
 
-    compile 'org.apache.dubbo:dubbo-spring-boot-starter:2.7.3'
-    compile group: 'com.alibaba.nacos', name: 'nacos-client', version: '0.9.1'
-    compile group: 'org.apache.dubbo', name: 'dubbo-registry-nacos', version: "${dubboVersion}"
+    api'org.apache.dubbo:dubbo-spring-boot-starter:2.7.3'
+    api group: 'com.alibaba.nacos', name: 'nacos-client', version: '0.9.1'
+    api group: 'org.apache.dubbo', name: 'dubbo-registry-nacos', version: "${dubboVersion}"
 }
 
 
