--- a/flycat-template/flycat-simple/config/gradle/javaProject.gradle
+++ b/flycat-template/flycat-simple/config/gradle/javaProject.gradle
@@ -13,25 +13,25 @@ lombok {
 
 
 dependencies {
-//    compile group: 'org.apache.commons', name: 'commons-lang3', version: '3.8.1'
+//    api group: 'org.apache.commons', name: 'commons-lang3', version: '3.8.1'
 
-    compile group: 'com.google.guava', name: 'guava', version: '25.1-jre'
-//    compile group: 'com.alibaba', name: 'fastjson', version: '1.2.58'
-    compile group: 'org.slf4j', name: 'slf4j-api', version: '1.7.26'
-//    compile group: 'org.jetbrains', name: 'annotations', version: '13.0'
-    compile group: 'javax.inject', name: 'javax.inject', version: '1'
-    compile group: 'javax.annotation', name: 'javax.annotation-api', version: '1.3.2'
+    api group: 'com.google.guava', name: 'guava', version: '25.1-jre'
+//    api group: 'com.alibaba', name: 'fastjson', version: '1.2.58'
+    api group: 'org.slf4j', name: 'slf4j-api', version: '1.7.26'
+//    api group: 'org.jetbrains', name: 'annotations', version: '13.0'
+    api group: 'javax.inject', name: 'javax.inject', version: '1'
+    api group: 'javax.annotation', name: 'javax.annotation-api', version: '1.3.2'
 
-    compile 'org.javassist:javassist:3.21.0-GA'
-    compile 'org.reflections:reflections:0.9.9-RC2'
+    api'org.javassist:javassist:3.21.0-GA'
+    api'org.reflections:reflections:0.9.9-RC2'
 
 
-    compile 'com.google.code.findbugs:jsr305:3.0.2'
+    api'com.google.code.findbugs:jsr305:3.0.2'
     // vendor
 // https://mvnrepository.com/artifact/org.apache.commons/commons-text
-//    compile group: 'org.apache.commons', name: 'commons-text', version: '1.6'
+//    api group: 'org.apache.commons', name: 'commons-text', version: '1.6'
 
-    testCompile 'junit:junit:4.12'
+    testImplementation 'junit:junit:4.12'
 }
 
 checkstyle {
