--- a/flycat-context/build.gradle
+++ b/flycat-context/build.gradle
@@ -1,8 +1,10 @@
+apply from: "${gradleConfigDir}/bootProject.gradle"
 
 dependencies {
     api project(':flycat-util')
 
-    compileOnly "org.springframework.boot:spring-boot:$springBootVersion"
+    // compileOnly "org.springframework.boot:spring-boot:$springBootVersion"
+    compileOnly "org.springframework.boot:spring-boot"
     compileOnly group: 'ch.qos.logback', name: 'logback-classic', version: '1.2.3'
 }
 
