--- a/flycat-springboot/flycat-context/build.gradle
+++ b/flycat-springboot/flycat-context/build.gradle
@@ -1,10 +1,13 @@
+apply from: "${gradleConfigDir}/bootProject.gradle"
 
 dependencies {
     api project(':flycat-context')
     api project(':flycat-agent')
-    api "org.springframework.boot:spring-boot:$springBootVersion"
-    api "org.springframework.boot:spring-boot-starter-aop:$springBootVersion"
+    // api "org.springframework.boot:spring-boot:$springBootVersion"
+    // api "org.springframework.boot:spring-boot-starter-aop:$springBootVersion"
 
+    api "org.springframework.boot:spring-boot"
+    api "org.springframework.boot:spring-boot-starter-aop"
 }
 
 
