--- a/flycat-springboot/flycat-configure/build.gradle
+++ b/flycat-springboot/flycat-configure/build.gradle
@@ -1,8 +1,10 @@
 dependencies {
-    api "org.springframework.boot:spring-boot-autoconfigure:$springBootVersion"
 
-    compileOnly "org.springframework.boot:spring-boot-starter-tomcat:$springBootVersion"
+    // api "org.springframework.boot:spring-boot-autoconfigure:$springBootVersion"
+    // compileOnly "org.springframework.boot:spring-boot-starter-tomcat:$springBootVersion"
 
+    api "org.springframework.boot:spring-boot-autoconfigure"
+    compileOnly "org.springframework.boot:spring-boot-starter-tomcat"
 
     compileOnly project(':flycat-context')
     compileOnly project(':flycat-spi')
