--- a/flycat-springboot/flycat-mybatis/build.gradle
+++ b/flycat-springboot/flycat-mybatis/build.gradle
@@ -2,8 +2,8 @@
 dependencies {
     api project(':flycat-util')
 
-    api "org.springframework.boot:spring-boot-starter-jdbc:$springBootVersion"
-    
+    // api "org.springframework.boot:spring-boot-starter-jdbc:$springBootVersion"
+    api "org.springframework.boot:spring-boot-starter-jdbc"
     // Datasource
 //    api group: 'org.mybatis', name: 'mybatis', version: '3.4.6'
 //    api group: 'org.mybatis', name: 'mybatis-spring', version: '1.3.2'
