--- a/flycat-springboot/flycat-redis/build.gradle
+++ b/flycat-springboot/flycat-redis/build.gradle
@@ -2,7 +2,8 @@ dependencies {
     api project(':flycat-spi')
     api project(':flycat-context')
     api project(':flycat-spi')
-    api "org.springframework.boot:spring-boot-starter-data-redis:$springBootVersion"
+    // api "org.springframework.boot:spring-boot-starter-data-redis:$springBootVersion"
+    api "org.springframework.boot:spring-boot-starter-data-redis"
 }
 
 
