--- a/flycat-springboot/flycat-context/build.gradle
+++ b/flycat-springboot/flycat-context/build.gradle
@@ -1,4 +1,4 @@
-apply from: "${gradleConfigDir}/bootProject.gradle"
+apply from: "${gradleConfigDir}/springbootProject.gradle"
 
 dependencies {
     api project(':flycat-context')
