--- a/config/gradle/bootappProject.gradle
+++ b/config/gradle/bootappProject.gradle
@@ -62,7 +62,7 @@ if (hasProperty("appClassName")) {
     mainClassName = ext.appClassName
 }
 
-ext.springJvmArgs = ["-Dspring.profiles.active=${ext.env}".toString()]
+ext.springJvmArgs = ["-Dspring.profiles.active=${env}".toString()]
 
 
 def vJavaVersion = vJavaLang as double
@@ -236,10 +236,9 @@ println 'App jvm args: ' + applicationDefaultJvmArgs.join(",")
 //defaultTasks 'compileJava', 'checkStyle'
 
 
-// disable to fix distTar(not copy app self jar)
+//// disable to fix distTar(not copy app self jar)
 jar.enabled = true
 bootJar.enabled = false
-
 
 distZip.enabled = false
 bootDistTar.enabled = false
