--- a/config/gradle/git.gradle
+++ b/config/gradle/git.gradle
@@ -48,7 +48,7 @@ def createRepoChangeFile = { ->
         diff = execCmdWithRawOut(['git', 'diff', 'HEAD^', 'HEAD', '--color'])
     }
 
-    def directoryName = "build/generated/git"
+    def directoryName = "${buildDir}/build/generated/git"
     File directory = new File(directoryName);
     if (! directory.exists()){
         directory.mkdirs();
